# semester-work-segment-tree

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  benchmarks.cpp  test_benches.cpp  test_benchmarks.cpp
dataset/: test_data.py
dataset/data/: dataset-example.csv
include/: data_structure.hpp  segment_tree.hpp
src/: data_structure.cpp  segment_tree.cpp
